--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ img{
   animation-duration: 14s;
   position: absolute;
   animation-direction: reverse;
-  animation-iteration-count: 5;
+  animation-iteration-count: infinite;
 }
 
 .fish2{
@@ -70,7 +70,7 @@ img{
   animation-delay: 0.5s;
   position: absolute;
   animation-direction: reverse;
-  animation-iteration-count: 5;
+  animation-iteration-count: infinite;
   animation-timing-function: ease-in-out;
 }
 
@@ -81,7 +81,7 @@ img{
      position: absolute;
      animation-direction: reverse;
      animation-timing-function: ease-out;
-     animation-iteration-count: 5;
+     animation-iteration-count: infinite;
    }
 
    .fish4{
@@ -90,7 +90,7 @@ img{
      animation-delay: 1s;
      position: absolute;
      animation-direction: reverse;
-     animation-iteration-count: 5;
+     animation-iteration-count: infinite;
    }
    
    .bubblecontainer{
